--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -123,7 +123,8 @@
                                             th:onclick="|location.href='@{/admin/node/list/{pageNumber}(pageNumber= ${pageNumber} -1)}'|"
                                         ><a class="page-link" th:text="${pageNumber}">1</a></li>
                                         <li class="page-item">
-                                            <a class="page-link" href="#" aria-label="Next">
+<!--                                            th:onclick="|location.href='@{/admin/node/list/{pageNumber}(pageNumber= ${(pageNumber/10+1)*10})}'|">-->
+                                            <a class="page-link" aria-label="Next">
                                                 <span aria-hidden="true">&raquo;</span>
                                             </a>
                                         </li>
