--- a/src/main/resources/templates/place/place-manage.html
+++ b/src/main/resources/templates/place/place-manage.html
@@ -13,12 +13,12 @@
             <div class="col-10" style="background-color: rgb(242,248,250); width: 85%; margin-left:15%; margin-top:5%;">
                 <div class="container-fluid mt-4 p-0" style="background-color: rgb(242,248,250);">
                     <div class="row ms-5 mb-3 mt-2 nodeHeader">
-                        관리자 > 건물 관리 > 건물 목록 조회
+                        관리자 > 장소 관리 > 장소 목록 조회
                     </div>
                     <div class="row ms-1">
                         <div class="col-11 ms-5" style="width:88%;">
                             <div class="row mb-3 fs-1 fontHv">
-                                건물 목록
+                                장소 목록
                             </div>
                             <div class="row bg-white">
                                 <div class="col-5 align-items-center">
@@ -27,27 +27,35 @@
                                     </div>
                                 </div>
                                 <div class="col-3 offset-4 align-items-center text-end">
-                                    <a href="/admin/event/add" class="btn btn-primary add mt-2 sidebarItem fs-6">건물 등록</a>
+                                    <a href="/admin/place/add" class="btn btn-primary add mt-2 sidebarItem fs-6">장소 등록</a>
                                 </div>
                             </div>
                             <div class="row" style="height : 70vh">
                                 <table class="table">
                                     <thead class="text-center">
                                     <tr>
-                                        <th scope="col">건물 이름</th>
-                                        <th scope="col">건물 분류</th>
-                                        <th scope="col">건물 요약정보</th>
-                                        <th scope="col">건물 층의 개수</th>
-                                        <th scope="col">건물 높이</th>
+                                        <th scope="col"> 장소 유형
+                                            <select id="categoryFilter">
+                                                <option value="ALL">모두</option>
+                                                <option value="BUILDING" selected>건물</option>
+                                                <option value="SMOKING">흡연구역</option>
+                                                <option value="FOOD">음식점</option>
+                                                <option value="CAFE">카페</option>
+                                                <option value="CONV">편의점</option>
+                                                <option value="WELFARE">복지시설</option>
+                                                <option value="PRINT">인쇄</option>
+                                                <option value="BUSSTOP">버스정류장</option>
+                                            </select>
+                                        </th>
+                                        <th scope="col">장소 이름</th>
+                                        <th scope="col">장소 요약 정보</th>
                                     </tr>
                                     </thead>
                                     <tbody class="text-center">
-                                    <tr th:each="place : ${placeList}" th:onclick="|location.href='@{/admin/building/{buildingId}(buildingId=${building.getPlaceId()})}'|">
-                                        <td th:text="${place.placeName}">1</td>
+                                    <tr th:each="place : ${placeList}" th:onclick="|location.href='@{/admin/place/{placeId}(placeId=${place.getPlaceId()})}'|">
                                         <td th:text="${place.placeCategory}">Mark</td>
+                                        <td th:text="${place.placeName}">1</td>
                                         <td th:text="${place.placeSummary}">Otto</td>
-                                        <td th:text="${place.getBuildingFloors().size()}">@mdo</td>
-                                        <td th:text="${place.buildingHeight}">@mdo</td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -80,5 +88,24 @@
             </div>
         </div>
     </div>
+
+    <script>
+        // 페이지 로드 후 실행되는 함수
+        window.onload = function() {
+            // 드롭다운 메뉴 변경 시 호출되는 함수
+            document.getElementById("categoryFilter").addEventListener("change", function() {
+                var category = this.value;
+                var placeTableRows = document.querySelectorAll("#placeTable tr");
+                placeTableRows.forEach(function(row) {
+                    var placeCategory = row.cells[0].textContent;
+                    if (category === "all" || placeCategory === category) {
+                        row.style.display = "table-row";
+                    } else {
+                        row.style.display = "none";
+                    }
+                });
+            });
+        };
+    </script>
 </body>
 </html>
